New blogpost (orientability), rewrote the index page.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,15 +24,15 @@ const projects: CollectionEntry<"projects">[] = (
   <Container>
     <aside data-pagefind-ignore>
       <h1 class="font-semibold text-black dark:text-white">
-        Personal website and blog of Rafael Hipolito
+        Home of my personal website and blog
       </h1>
       <div class="space-y-16">
         <section>
           <article class="space-y-4">
             <span>
               <p>
-                Mathematician by training and programmer by passion, this website
-                serves as a platform to both share my thoughts and to showcase some of my projects.
+                I'm a 22 year-old grad student studying Mathematics at the Univerisity of Lisbon.
+                This website serves as my own personal blog as well as a way to showcase some of my projects.
               </p>
             </span>
           </article>
