--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,15 +24,20 @@ const projects: CollectionEntry<"projects">[] = (
   <Container>
     <aside data-pagefind-ignore>
       <h1 class="font-semibold text-black dark:text-white">
-        Home of my personal website and blog
+        About me and this website
       </h1>
       <div class="space-y-16">
         <section>
           <article class="space-y-4">
             <span>
               <p>
-                I'm a 22 year-old grad student studying Mathematics at the Univerisity of Lisbon.
-                This website serves as my own personal blog as well as a way to showcase some of my projects.
+                I'm a 23 year-old grad student studying Mathematics at the <a href = "https://en.wikipedia.org/wiki/University_of_Lisbon">University of Lisbon</a>.<br>
+                I completed my Bachelor's degree, also in Mathematics, with honors in 2024.<br><br>
+                In 2025 I won the first edition of the <a href = "https://en.wikipedia.org/wiki/Integration_Bee">Integration Bee</a> competition held at <a href = "(https://en.wikipedia.org/wiki/Instituto_Superior_T%C3%A9cnico">IST</a>,
+                whose consequent interview can be found <a href ="https://ciencias.ulisboa.pt/en/news/rafael-hipolito-vencedor-do-concurso-integration-bee-a-vida-de-um-matematico-consiste-em-perseguir-o-que-nao-sabe">here</a>,
+                in Portuguese.<br><br>
+
+                This website is a personal project of mine where I can share my thoughts and projects.
               </p>
             </span>
           </article>
